src/deities/snapshots/bag_of_tricks__deities__goblinoid__tests__bugbear_deities.snap
---
source: src/deities/goblinoid.rs
expression: "Bugbear::deities()"

---
- name: Hruggek
  titles:
    - god of violence
  alignment:
    - Chaotic
    - Evil
  domains:
    - War
  symbols:
    - Morningstar

