src/deities/snapshots/bag_of_tricks__deities__goblinoid__tests__goblin_deities.snap
---
source: src/deities/goblinoid.rs
expression: "Goblin::deities()"

---
- name: Maglubiyet
  titles:
    - god of war
  alignment:
    - Lawful
    - Evil
  domains:
    - War
  symbols:
    - Bloody axe

